fix note card code block wrap

--- a/src/components/NoteCard/NoteCard.module.scss
+++ b/src/components/NoteCard/NoteCard.module.scss
@@ -144,6 +144,10 @@
   :global(ul[data-type='taskList'] li > div) {
     flex: 1;
   }
+
+  code {
+    text-wrap: auto;
+  }
 }
 
 .archivedBadge {
